feat(styles)🎨: ajusta as dimensões do body para melhor responsividade

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,10 @@ body {
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
+    background-repeat: no-repeat;
     font-family: "poppins", sans-serif;
+    max-width: 100%;
+    min-height: 100vh;
 }
 
 .box {
